Fix wrong color

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -71,7 +71,7 @@ body
 .featuredSymbol
     color: default.$list-featured-color
 .notKnownSymbol
-    color: default.$list-milestone-color
+    color: default.$list-notknown-color
 .errorSymbol
     color: default.$text-error-color
     font-weight: default.$text-error-weight
